--- a/shippable.yml
+++ b/shippable.yml
@@ -1,4 +1,4 @@
-#build_image: shippableimages/ubuntu1204_nodejs
+build_image: shippableimages/ubuntu1204_nodejs
 
 # Language setting
 language: node_js
@@ -26,7 +26,6 @@ archive: true
 # Running the tests with grunt
 script:
   - grunt
-
 
 
 # Tell istanbul to generate a coverage report
