--- a/shippable.yml
+++ b/shippable.yml
@@ -1,4 +1,4 @@
-build_image: shippableimages/ubuntu1204_nodejs
+#build_image: shippableimages/ubuntu1204_nodejs
 
 # Language setting
 language: node_js
@@ -6,6 +6,7 @@ language: node_js
 # Version number
 node_js:
   - 0.10.25
+  - 0.11
 
 # The path for Xunit to output test reports
 env:
