--- a/shippable.yml
+++ b/shippable.yml
@@ -3,7 +3,7 @@
 # Language setting
 language: node_js
 
-build_image: shippable/minv2:beta
+build_image: shippable/minv2
 
 # Version number
 node_js:
